--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,13 +1,88 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.oren.sunshine.app.DetailActivity.DetailFragment">
+    tools:context="com.example.oren.sunshine.app.DetailActivity$DetailFragment">
 
     <TextView android:layout_width="wrap_content"
-        android:id="@+id/detail_text"
+        android:id="@+id/detail_day_name"
         android:layout_height="wrap_content" />
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/detail_text" />
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/detail_day_name"
+        android:layout_alignRight="@+id/detail_day_name"
+        android:layout_alignEnd="@+id/detail_day_name"
+        android:id="@+id/detail_date" />
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/detail_date"
+        android:layout_alignRight="@+id/detail_date"
+        android:layout_alignEnd="@+id/detail_date"
+        android:id="@+id/detail_high" />
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/detail_high"
+        android:layout_alignRight="@+id/detail_high"
+        android:layout_alignEnd="@+id/detail_high"
+        android:id="@+id/detail_low" />
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/detail_low"
+        android:layout_alignRight="@+id/detail_low"
+        android:layout_alignEnd="@+id/detail_low"
+        android:id="@+id/detail_humidity" />
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/detail_humidity"
+        android:layout_alignRight="@+id/detail_humidity"
+        android:layout_alignEnd="@+id/detail_humidity"
+        android:id="@+id/detail_wind" />
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/detail_wind"
+        android:layout_alignRight="@+id/detail_wind"
+        android:layout_alignEnd="@+id/detail_wind"
+        android:id="@+id/detail_pressure" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/detail_forecast_icon"
+        android:layout_alignLeft="@+id/detail_forecast_icon"
+        android:layout_alignStart="@+id/detail_forecast_icon"
+        android:id="@+id/detail_forecast_label" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@mipmap/ic_launcher"
+        android:layout_marginRight="61dp"
+        android:layout_marginEnd="61dp"
+        android:layout_marginTop="105dp"
+        android:id="@+id/detail_forecast_icon"
+        android:layout_below="@+id/detail_day_name"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
